--- a/server/pom.xml
+++ b/server/pom.xml
@@ -8,12 +8,29 @@
 	</parent>
 	<artifactId>CompManager-server</artifactId>
 	
+	<repositories>
+		<repository>
+			<id>addstar-repo</id>
+			<url>http://maven.addstar.com.au/artifactory/all-snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>CompManager-common</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>au.com.addstar</groupId>
+			<artifactId>Monolith</artifactId>
+			<version>1.2.2-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	
