Comp lobby plugin now loads active competitions

--- a/lobby/src/main/resources/plugin.yml
+++ b/lobby/src/main/resources/plugin.yml
@@ -11,6 +11,8 @@ permissions:
     default: OP
   comp.whitelist.admin:
     default: OP
+  comp.admin.list:
+    default: OP
 
 commands:
   compadmin:
