--- a/common/pom.xml
+++ b/common/pom.xml
@@ -22,5 +22,11 @@
 			<version>3.6.4</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>biz.paluch.redis</groupId>
+			<artifactId>lettuce</artifactId>
+			<version>4.1.Final</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 </project>
