--- a/server/src/main/resources/config.yml
+++ b/server/src/main/resources/config.yml
@@ -4,3 +4,11 @@ database:
   username: username
   password: password
   database: comp
+
+redis:
+  host: localhost
+  port: 6379
+  password: 
+
+# The server ID for the competition lobby
+lobby-id: complobby
