Added reload commands (lobby + server) to reload comp info

--- a/lobby/src/main/resources/plugin.yml
+++ b/lobby/src/main/resources/plugin.yml
@@ -13,6 +13,8 @@ permissions:
     default: OP
   comp.admin.list:
     default: OP
+  comp.admin.reload:
+    default: OP
 
 commands:
   compadmin:
