--- a/server/src/main/resources/plugin.yml
+++ b/server/src/main/resources/plugin.yml
@@ -28,3 +28,7 @@ commands:
   compjoin:
     permission: comp.join
     usage: /<command>
+  compagree:
+    aliases: [agree]
+    usage: /<command>
+  
