--- a/lobby/src/main/resources/plugin.yml
+++ b/lobby/src/main/resources/plugin.yml
@@ -15,6 +15,8 @@ permissions:
     default: OP
   comp.admin.reload:
     default: OP
+  comp.admin.sign:
+    default: OP
 
 commands:
   compadmin:
