Added /compadmin state commands * Allow you to change the state of the comp via command
Implemented CompBackendManager.update()

--- a/lobby/src/main/resources/plugin.yml
+++ b/lobby/src/main/resources/plugin.yml
@@ -19,6 +19,8 @@ permissions:
     default: OP
   comp.admin.info:
     default: OP
+  comp.admin.state:
+    default: OP
 
 commands:
   compadmin:
