Implemented the join sign to actually join the player into the comp
NOTE: Player is not currently teleported to their plot

--- a/lobby/src/main/resources/plugin.yml
+++ b/lobby/src/main/resources/plugin.yml
@@ -26,3 +26,6 @@ commands:
   compadmin:
     permission: comp.admin
     usage: /<command> <subcommand> ...
+  compagree:
+    aliases: [agree]
+    usage: /<command>
