Further implementation of voting system
Not persisted yet

--- a/server/src/main/resources/plugin.yml
+++ b/server/src/main/resources/plugin.yml
@@ -22,6 +22,8 @@ permissions:
     default: true
   comp.admin.state:
     default: OP
+  comp.admin.tallyvotes:
+    default: OP
 
 commands:
   compadmin:
