Add dependencies and repositories to the pom.xml files

--- a/lobby/pom.xml
+++ b/lobby/pom.xml
@@ -8,6 +8,24 @@
 	</parent>
 	<artifactId>CompManager-lobby</artifactId>
 
+	<repositories>
+		<repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/groups/public</url>
+		</repository>
+		<repository>
+			<id>addstar-release-repo</id>
+			<url>http://maven.addstar.com.au/artifactory/ext-release-local</url>
+		</repository>
+		<repository>
+			<id>addstar-snapshot-repo</id>
+			<url>http://maven.addstar.com.au/artifactory/ext-snapshot-local</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
@@ -20,6 +38,13 @@
 			<groupId>au.com.addstar</groupId>
 			<artifactId>Monolith</artifactId>
 			<version>1.4.4-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>minecraft-server</artifactId>
+			<version>1.10-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
