--- a/server/pom.xml
+++ b/server/pom.xml
@@ -8,6 +8,24 @@
 	</parent>
 	<artifactId>CompManager-server</artifactId>
 
+	<repositories>
+		<repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/groups/public</url>
+		</repository>
+		<repository>
+			<id>addstar-release-repo</id>
+			<url>http://maven.addstar.com.au/artifactory/ext-release-local</url>
+		</repository>
+		<repository>
+			<id>addstar-snapshot-repo</id>
+			<url>http://maven.addstar.com.au/artifactory/ext-snapshot-local</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
@@ -33,6 +51,13 @@
 					<artifactId>worldedit</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>minecraft-server</artifactId>
+			<version>1.10-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
