--- a/lobby/src/main/resources/plugin.yml
+++ b/lobby/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ version: ${plugin.version}
 
 main: au.com.addstar.comp.lobby.LobbyPlugin
 depend: [ProtocolLib, Monolith]
+softdepend: [BungeeChatBukkit]
 
 permissions:
   comp.admin:
