--- a/common/pom.xml
+++ b/common/pom.xml
@@ -10,7 +10,7 @@
 		<dependency>
 			<groupId>com.comphenix.protocol</groupId>
 			<artifactId>ProtocolLib</artifactId>
-			<version>3.6.4</version>
+			<version>4.1.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -21,8 +21,8 @@
 		</dependency>
 		<dependency>
 			<groupId>net.milkbowl.vault</groupId>
-			<artifactId>Vault</artifactId>
-			<version>1.4.1</version>
+			<artifactId>VaultAPI</artifactId>
+			<version>1.6</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
