--- a/lobby/pom.xml
+++ b/lobby/pom.xml
@@ -42,8 +42,8 @@
 
 		<dependency>
 			<groupId>org.spigotmc</groupId>
-			<artifactId>minecraft-server</artifactId>
-			<version>1.10-SNAPSHOT</version>
+			<artifactId>spigot-api</artifactId>
+			<version>1.11-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>au.com.addstar</groupId>
 			<artifactId>BungeeChat-Bukkit</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.1.0-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
