Fix dependencies to inherit correctly from parent

--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,13 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.11-R0.1-SNAPSHOT</version>
+            <version>1.11.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>au.com.addstar</groupId>
+            <artifactId>Monolith</artifactId>
+            <version>1.4.5-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
