--- a/lobby/pom.xml
+++ b/lobby/pom.xml
@@ -44,8 +44,8 @@
 			<groupId>au.com.addstar</groupId>
 			<artifactId>BungeeChat-Bukkit</artifactId>
 			<version>1.1.0-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
-
 	</dependencies>
 	
 	<build>
@@ -54,13 +54,20 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>2.4</version>
-				
 				<executions>
 					<execution>
 						<phase>package</phase>
 						<goals>
 							<goal>shade</goal>
 						</goals>
+						<configuration>
+							<minimizeJar>true</minimizeJar>
+							<artifactSet>
+								<excludes>
+									<exclude>com.google.guava:guava:*</exclude>
+								</excludes>
+							</artifactSet>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
