Reduced shade size remove netty shading its provided in spigot

--- a/lobby/pom.xml
+++ b/lobby/pom.xml
@@ -65,6 +65,7 @@
 							<artifactSet>
 								<excludes>
 									<exclude>com.google.guava:guava:*</exclude>
+									<exclude>io.netty:*:*</exclude>
 								</excludes>
 							</artifactSet>
 						</configuration>
