--- a/server/pom.xml
+++ b/server/pom.xml
@@ -64,6 +64,7 @@
 							<artifactSet>
 								<excludes>
 									<exclude>com.google.guava:guava:*</exclude>
+									<exclude>io.netty:*:*</exclude>
 								</excludes>
 							</artifactSet>
 						</configuration>
