--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,17 @@
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/groups/public</url>
         </repository>
+
+        <!-- ProtocolLib -->
+        <repository>
+            <id>dmulloy2-releases</id>
+            <url>http://repo.dmulloy2.net/content/repositories/releases/</url>
+        </repository>
         <repository>
             <id>dmulloy2-repo</id>
             <url>http://repo.dmulloy2.net/content/groups/public/</url>
         </repository>
+
         <!-- For Vault -->
         <repository>
             <id>vault-repo</id>
