--- a/common/pom.xml
+++ b/common/pom.xml
@@ -10,7 +10,7 @@
 		<dependency>
 			<groupId>com.comphenix.protocol</groupId>
 			<artifactId>ProtocolLib</artifactId>
-			<version>4.1.0</version>
+			<version>4.4.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
