--- a/server/src/main/resources/plugin.yml
+++ b/server/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ author: Schmoller
 version: ${plugin.version}
 
 main: au.com.addstar.comp.CompPlugin
-depend: [ProtocolLib, Monolith]
+depend: [ProtocolLib, Monolith, PlotSquared]
 
 # TODO: standardise permissions
 permissions:
