Add p2 api repo

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
             <id>dmulloy2-repo</id>
             <url>http://repo.dmulloy2.net/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>p2</id>
+            <name>Api Repo</name>
+            <url>http://ci.athion.net/job/PlotSquared-Breaking/ws/mvn/</url>
+        </repository>
     </repositories>
 
     <dependencies>
