--- a/server/src/main/resources/plugin.yml
+++ b/server/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: CompManager
 description: This plugin is to go on all comp servers to handle running comps
 author: Schmoller
 version: ${plugin.version}
+api-version: 1.13
 
 main: au.com.addstar.comp.CompPlugin
 depend: [ProtocolLib, Monolith, PlotSquared]
