--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,10 @@
             <name>Api Repo</name>
             <url>http://ci.athion.net/job/PlotSquared-Breaking/ws/mvn/</url>
         </repository>
+        <repository>
+            <id>placeholderapi</id>
+            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -111,6 +115,12 @@
             <groupId>au.com.addstar</groupId>
             <artifactId>Monolith</artifactId>
             <version>1.5.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.8.2</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
