Fix Servername issues *** MUST UPDATE CONFIG WITH NEW VALUES FOR EACH SERVER ** 'server-id: null' **UPDATE OR ADD THIS.

--- a/server/src/main/resources/config.yml
+++ b/server/src/main/resources/config.yml
@@ -9,6 +9,9 @@ redis:
   host: localhost
   port: 6379
   password: 
+#This Server id for the lobby this should be the same as the lobby-id
+server-id: null
 
 # The server ID for the competition lobby
 lobby-id: complobby
+
