Re-add exclusion...

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,12 @@
             <artifactId>MVdWPlaceholderAPI</artifactId>
             <version>3.0.0-SNAPSHOT</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.spigotmc</groupId>
+                    <artifactId>spigot</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
     <build>
