Refactor the placeholder extension Code analysis improvements

--- a/lobby/src/main/resources/hikari.properties
+++ b/lobby/src/main/resources/hikari.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 #Hikari Properties
 dataSource.cachePrepStmts=true
 dataSource.prepStmtCacheSize=250
