--- a/server/pom.xml
+++ b/server/pom.xml
@@ -16,20 +16,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.intellectualsites.plotsquared</groupId>
-			<artifactId>Plotsquared-Api</artifactId>
-			<version>4.176</version>
-			<scope>provided</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>com.sk89q.worldedit</groupId>
-					<artifactId>worldedit-core</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>com.github.intellectualsites.plotsquared</groupId>
-			<artifactId>Plotsquared</artifactId>
-			<version>4.0.0.265</version>
+			<artifactId>PlotSquared</artifactId>
+			<version>4.0-SNAPSHOT</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
