--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>au.com.addstar</groupId>
 		<artifactId>CompManager-parent</artifactId>
-		<version>0.0.3-SNAPSHOT</version>
+		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>CompManager-common</artifactId>
     <packaging>jar</packaging>
@@ -11,7 +11,7 @@
 		<dependency>
 			<groupId>com.comphenix.protocol</groupId>
 			<artifactId>ProtocolLib-API</artifactId>
-			<version>4.4.0-SNAPSHOT</version>
+			<version>4.4.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
