--- a/server/pom.xml
+++ b/server/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>au.com.addstar</groupId>
 		<artifactId>CompManager-parent</artifactId>
-		<version>0.0.3-SNAPSHOT</version>
+		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>CompManager-server</artifactId>
 
@@ -11,20 +11,15 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>CompManager-common</artifactId>
-			<version>0.0.3-SNAPSHOT</version>
+			<version>0.0.4-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+		<!-- PlotSquared API -->
 		<dependency>
-			<groupId>com.github.intellectualsites.plotsquared</groupId>
+			<groupId>com.plotsquared</groupId>
 			<artifactId>PlotSquared</artifactId>
-			<version>4.0-SNAPSHOT</version>
+			<version>5.11.1</version>
 			<scope>provided</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.spigotmc</groupId>
-					<artifactId>spigot</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
