--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <build.number />
         <plugin.version>${project.version}-${build.number}</plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spigot.api.version>1.14</spigot.api.version>
-        <spigot.version>1.15.2-R0.1-SNAPSHOT</spigot.version>
+        <spigot.api.version>1.16</spigot.api.version>
+        <spigot.version>1.16.3-R0.1-SNAPSHOT</spigot.version>
     </properties>
     <scm>
         <connection>scm:git:git@github.com:AddstarMC/CompManager.git</connection>
@@ -114,6 +114,11 @@
             <name>MVdW Public Repositories</name>
             <url>http://repo.mvdw-software.be/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>mvnrepository</id>
+            <name>mvnrepository</name>
+            <url>https://mvnrepository.com/artifact/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -132,7 +137,7 @@
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.10.6</version>
+            <version>2.10.9</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
