--- a/server/pom.xml
+++ b/server/pom.xml
@@ -16,9 +16,9 @@
 		</dependency>
 		<!-- PlotSquared API -->
 		<dependency>
-			<groupId>com.plotsquared</groupId>
-			<artifactId>PlotSquared-Bukkit</artifactId>
-			<version>5.11.1</version>
+			<groupId>com.intellectualsites.plotsquared</groupId>
+			<artifactId>plotsquared-core</artifactId>
+			<version>7.0.0</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>19.0.0</version>
+            <version>24.0.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -44,7 +44,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.2.4</version>
+				<version>3.5.1</version>
 
 				<executions>
 					<execution>
