chore: Add PAPI soft depend to lobby plugin.yml as well

--- a/lobby/src/main/resources/plugin.yml
+++ b/lobby/src/main/resources/plugin.yml
@@ -6,7 +6,7 @@ api-version: 1.13
 
 main: au.com.addstar.comp.lobby.LobbyPlugin
 depend: [ProtocolLib, Monolith]
-softdepend: [BungeeChatBukkit]
+softdepend: [BungeeChatBukkit, PlaceholderAPI]
 
 permissions:
   comp.admin:
