--- a/common/pom.xml
+++ b/common/pom.xml
@@ -33,7 +33,7 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>net.milkbowl.vault</groupId>
+			<groupId>com.github.MilkBowl</groupId>
 			<artifactId>VaultAPI</artifactId>
 			<version>1.7</version>
 			<scope>provided</scope>
