fix: Use VV as a dependency and be a lot less hacky

--- a/lobby/pom.xml
+++ b/lobby/pom.xml
@@ -32,6 +32,12 @@
 			<version>0.0.7</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.viaversion</groupId>
+			<artifactId>viaversion-api</artifactId>
+			<version>LATEST</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
