feat: Add backup command to lobby server

--- a/lobby/src/main/resources/plugin.yml
+++ b/lobby/src/main/resources/plugin.yml
@@ -35,6 +35,8 @@ permissions:
     default: false
   comp.admin.dialog.others:
     default: OP
+  comp.admin.backup:
+    default: OP
 
 commands:
   compadmin:
